--- a/operator/config/samples/nsx_v1alpha1_nsxmigration.yaml
+++ b/operator/config/samples/nsx_v1alpha1_nsxmigration.yaml
@@ -1,9 +1,13 @@
 apiVersion: nsx.npguard.io/v1alpha1
-kind: MigrateNSX
+kind: NSXMigration
 metadata:
   labels:
     app.kubernetes.io/name: operator
     app.kubernetes.io/managed-by: kustomize
-  name: migratensx-sample
+  name: nsxmigration-sample
 spec:
   # TODO(user): Add fields here
+  url: ''
+  secret:
+    name: ''
+    namespace: ''
