--- a/operator/config/rbac/kustomization.yaml
+++ b/operator/config/rbac/kustomization.yaml
@@ -22,6 +22,6 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the Project itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
-- migratensx_editor_role.yaml
-- migratensx_viewer_role.yaml
+- nsxmigration_editor_role.yaml
+- nsxmigration_viewer_role.yaml
 
