--- a/operator/config/samples/kustomization.yaml
+++ b/operator/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples of your project ##
 resources:
-- nsx_v1alpha1_migratensx.yaml
+- nsx_v1alpha1_nsxmigration.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
