--- a/operator/config/samples/nsx_v1alpha1_nsxmigration.yaml
+++ b/operator/config/samples/nsx_v1alpha1_nsxmigration.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/name: operator
     app.kubernetes.io/managed-by: kustomize
-  name: nsxmigration-sample
+  name: nsxmigration-sample-2
 spec:
   # TODO(user): Add fields here
   url: ''
