--- a/operator/Makefile
+++ b/operator/Makefile
@@ -191,6 +191,7 @@ uninstall: manifests kustomize ## Uninstall CRDs from the K8s cluster specified 
 deploy: manifests kustomize ## Deploy controller to the K8s cluster specified in ~/.kube/config.
 	cd config/manager && $(KUSTOMIZE) edit set image controller=${IMG}
 	$(KUSTOMIZE) build config/default | $(KUBECTL) apply -f -
+	kubectl patch  deployment operator-controller-manager -n operator-system -p '{"spec": {"template": {"spec":{"containers":[{"name": "manager", "imagePullPolicy":"Always"}]}}}}'
 
 .PHONY: undeploy
 undeploy: kustomize ## Undeploy controller from the K8s cluster specified in ~/.kube/config. Call with ignore-not-found=true to ignore resource not found errors during deletion.
