--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds_false_0/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds_false_0/pods.yaml
@@ -3,6 +3,20 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Slytherin: "true"
+        tag__DB: "true"
+        tag__Slytherin: "true"
+    name: Slytherin-DB
+spec:
+    containers: null
+status: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+    creationTimestamp: null
+    labels:
+        group__Slytherin: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
         tag__Slytherin: "true"
         tag__Web: "true"
@@ -16,6 +30,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Slytherin: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
         tag__App: "true"
         tag__Slytherin: "true"
@@ -29,6 +44,20 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Hufflepuff: "true"
+        tag__DB: "true"
+        tag__Hufflepuff: "true"
+    name: Hufflepuff-DB
+spec:
+    containers: null
+status: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+    creationTimestamp: null
+    labels:
+        group__Hufflepuff: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         tag__Hufflepuff: "true"
         tag__Web: "true"
@@ -42,6 +71,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Hufflepuff: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         tag__App: "true"
         tag__Hufflepuff: "true"
@@ -55,6 +85,20 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Gryffindor: "true"
+        tag__DB: "true"
+        tag__Gryffindor: "true"
+    name: Gryffindor-DB
+spec:
+    containers: null
+status: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+    creationTimestamp: null
+    labels:
+        group__Gryffindor: "true"
         group__Gryffindor-orOrAnd-no-DB: "true"
         tag__Gryffindor: "true"
         tag__Web: "true"
@@ -68,6 +112,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Gryffindor: "true"
         group__Gryffindor-orOrAnd-no-DB: "true"
         tag__App: "true"
         tag__Gryffindor: "true"
