--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds_false_0/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds_false_0/pods.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Slytherin-orOrAnd-no-DB: "true"
+        group__Slytherin: "true"
         tag__DB: "true"
         tag__Slytherin: "true"
     name: Slytherin-DB
@@ -18,6 +18,7 @@ metadata:
     labels:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
+        group__Slytherin: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
         tag__Slytherin: "true"
         tag__Web: "true"
@@ -33,6 +34,7 @@ metadata:
     labels:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
+        group__Slytherin: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
         tag__App: "true"
         tag__Slytherin: "true"
@@ -46,8 +48,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Gryffindor-orOrAnd-no-DB: "true"
-        group__Hufflepuff-orOrAnd-no-DB: "true"
+        group__Hufflepuff: "true"
         tag__DB: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-DB
@@ -60,6 +61,8 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Gryffindor-orOrAnd-no-DB: "true"
+        group__Hufflepuff: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
         tag__Hufflepuff: "true"
@@ -74,6 +77,8 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Gryffindor-orOrAnd-no-DB: "true"
+        group__Hufflepuff: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
         tag__App: "true"
@@ -88,7 +93,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Gryffindor-orOrAnd-no-DB: "true"
+        group__Gryffindor: "true"
         tag__DB: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-DB
@@ -101,6 +106,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Gryffindor: "true"
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
@@ -116,6 +122,7 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
+        group__Gryffindor: "true"
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
