--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -20,6 +20,18 @@ rules:
   - list
   - watch
 - apiGroups:
+  - networking.k8s.io
+  resources:
+  - networkpolicies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - nsx.npguard.io
   resources:
   - nsxmigrations
