--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes/pods.yaml
@@ -8,6 +8,7 @@ metadata:
         tag__DB: "true"
         tag__Slytherin: "true"
     name: Slytherin-DB
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -22,6 +23,7 @@ metadata:
         tag__Slytherin: "true"
         tag__Web: "true"
     name: Slytherin-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -36,6 +38,7 @@ metadata:
         tag__App: "true"
         tag__Slytherin: "true"
     name: Slytherin-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -50,6 +53,7 @@ metadata:
         tag__DB: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-DB
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -64,6 +68,7 @@ metadata:
         tag__Hufflepuff: "true"
         tag__Web: "true"
     name: Hufflepuff-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -78,6 +83,7 @@ metadata:
         tag__App: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -92,6 +98,7 @@ metadata:
         tag__DB: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-DB
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -106,6 +113,7 @@ metadata:
         tag__Gryffindor: "true"
         tag__Web: "true"
     name: Gryffindor-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -120,6 +128,7 @@ metadata:
         tag__App: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-App
+    namespace: default
 spec:
     containers: null
 status: {}
