--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -29,7 +30,8 @@ metadata:
         description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     egress:
         - to:
@@ -53,7 +55,8 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     egress:
         - to:
@@ -77,7 +80,8 @@ metadata:
         description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     egress:
         - to:
@@ -101,7 +105,8 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_4
+    name: policy-4
+    namespace: default
 spec:
     ingress:
         - from:
@@ -125,7 +130,8 @@ metadata:
         description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_5
+    name: policy-5
+    namespace: default
 spec:
     ingress:
         - from:
@@ -149,7 +155,8 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_6
+    name: policy-6
+    namespace: default
 spec:
     ingress:
         - from:
@@ -173,7 +180,8 @@ metadata:
         description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy_7
+    name: policy-7
+    namespace: default
 spec:
     ingress:
         - from:
@@ -197,7 +205,8 @@ metadata:
         description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy_8
+    name: policy-8
+    namespace: default
 spec:
     egress:
         - to:
@@ -223,7 +232,8 @@ metadata:
         description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy_9
+    name: policy-9
+    namespace: default
 spec:
     egress:
         - to:
@@ -249,7 +259,8 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy_10
+    name: policy-10
+    namespace: default
 spec:
     egress:
         - to:
@@ -275,7 +286,8 @@ metadata:
         description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy_11
+    name: policy-11
+    namespace: default
 spec:
     ingress:
         - from:
@@ -301,7 +313,8 @@ metadata:
         description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy_12
+    name: policy-12
+    namespace: default
 spec:
     ingress:
         - from:
@@ -327,7 +340,8 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy_13
+    name: policy-13
+    namespace: default
 spec:
     ingress:
         - from:
@@ -353,7 +367,8 @@ metadata:
         description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy_14
+    name: policy-14
+    namespace: default
 spec:
     egress:
         - to:
@@ -379,7 +394,8 @@ metadata:
         description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy_15
+    name: policy-15
+    namespace: default
 spec:
     egress:
         - to:
@@ -405,7 +421,8 @@ metadata:
         description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy_16
+    name: policy-16
+    namespace: default
 spec:
     egress:
         - to:
@@ -431,7 +448,8 @@ metadata:
         description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy_17
+    name: policy-17
+    namespace: default
 spec:
     ingress:
         - from:
@@ -457,7 +475,8 @@ metadata:
         description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy_18
+    name: policy-18
+    namespace: default
 spec:
     ingress:
         - from:
@@ -483,7 +502,8 @@ metadata:
         description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy_19
+    name: policy-19
+    namespace: default
 spec:
     ingress:
         - from:
@@ -509,7 +529,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
