--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleDumbeldore_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleDumbeldore_NoHint/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (group = DumbledoreAll) dst: (*) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -24,7 +25,8 @@ metadata:
         description: 'src: (group = DumbledoreAll) dst: (*) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     ingress:
         - from:
@@ -43,7 +45,8 @@ metadata:
         description: 'src: (group = DumbledoreNoSly) dst: (group != Slytherin) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     egress:
         - to:
@@ -65,7 +68,8 @@ metadata:
         description: 'src: (group = DumbledoreNoSly) dst: (group != Slytherin) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     ingress:
         - from:
@@ -87,7 +91,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
