--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/pods.yaml
@@ -7,6 +7,7 @@ metadata:
         tag__Slytherin: "true"
         tag__Web: "true"
     name: Slytherin-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -20,6 +21,7 @@ metadata:
         tag__App: "true"
         tag__Slytherin: "true"
     name: Slytherin-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -33,6 +35,7 @@ metadata:
         tag__Hufflepuff: "true"
         tag__Web: "true"
     name: Hufflepuff-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -46,6 +49,7 @@ metadata:
         tag__App: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -59,6 +63,7 @@ metadata:
         tag__Gryffindor: "true"
         tag__Web: "true"
     name: Gryffindor-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -72,6 +77,7 @@ metadata:
         tag__App: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-App
+    namespace: default
 spec:
     containers: null
 status: {}
