--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -26,7 +27,8 @@ metadata:
         description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     ingress:
         - from:
@@ -47,7 +49,8 @@ metadata:
         description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     egress:
         - to:
@@ -68,7 +71,8 @@ metadata:
         description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     ingress:
         - from:
@@ -89,7 +93,8 @@ metadata:
         description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_4
+    name: policy-4
+    namespace: default
 spec:
     egress:
         - to:
@@ -110,7 +115,8 @@ metadata:
         description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_5
+    name: policy-5
+    namespace: default
 spec:
     ingress:
         - from:
@@ -131,7 +137,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
