--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/pods.yaml
@@ -7,6 +7,7 @@ metadata:
         tag__DB: "true"
         tag__Slytherin: "true"
     name: Slytherin-DB
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -22,6 +23,7 @@ metadata:
         tag__Slytherin: "true"
         tag__Web: "true"
     name: Slytherin-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -37,6 +39,7 @@ metadata:
         tag__App: "true"
         tag__Slytherin: "true"
     name: Slytherin-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -51,6 +54,7 @@ metadata:
         tag__DB: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-DB
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -65,6 +69,7 @@ metadata:
         tag__Hufflepuff: "true"
         tag__Web: "true"
     name: Hufflepuff-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -79,6 +84,7 @@ metadata:
         tag__App: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -92,6 +98,7 @@ metadata:
         tag__DB: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-DB
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -107,6 +114,7 @@ metadata:
         tag__Gryffindor: "true"
         tag__Web: "true"
     name: Gryffindor-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -122,6 +130,7 @@ metadata:
         tag__App: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-App
+    namespace: default
 spec:
     containers: null
 status: {}
