--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/pods.yaml
@@ -6,6 +6,7 @@ metadata:
         group__Slytherin: "true"
         tag__Slytherin: "true"
     name: Slytherin
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -18,6 +19,7 @@ metadata:
         group__Hufflepuff: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -30,6 +32,7 @@ metadata:
         group__Gryffindor: "true"
         tag__Gryffindor: "true"
     name: Gryffindor
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -42,6 +45,7 @@ metadata:
         group__Dumbledore: "true"
         tag__Dumbledore: "true"
     name: Dumbledore
+    namespace: default
 spec:
     containers: null
 status: {}
