--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -27,7 +28,8 @@ metadata:
         description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     ingress:
         - from:
@@ -49,7 +51,8 @@ metadata:
         description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     egress:
         - to:
@@ -71,7 +74,8 @@ metadata:
         description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     ingress:
         - from:
@@ -93,7 +97,8 @@ metadata:
         description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1930"
     creationTimestamp: null
-    name: policy_4
+    name: policy-4
+    namespace: default
 spec:
     egress:
         - to:
@@ -115,7 +120,8 @@ metadata:
         description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1930"
     creationTimestamp: null
-    name: policy_5
+    name: policy-5
+    namespace: default
 spec:
     ingress:
         - from:
@@ -137,7 +143,8 @@ metadata:
         description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
         nsx-id: "1932"
     creationTimestamp: null
-    name: policy_6
+    name: policy-6
+    namespace: default
 spec:
     egress:
         - to:
@@ -159,7 +166,8 @@ metadata:
         description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
         nsx-id: "1932"
     creationTimestamp: null
-    name: policy_7
+    name: policy-7
+    namespace: default
 spec:
     ingress:
         - from:
@@ -181,7 +189,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
