--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (tag = Gryffindor) dst: (tag = Web and tag = Gryffindor) conn: All Connections'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -29,7 +30,8 @@ metadata:
         description: 'src: (tag = Hufflepuff) dst: (tag = Web and tag = Hufflepuff) conn: All Connections'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     egress:
         - to:
@@ -53,7 +55,8 @@ metadata:
         description: 'src: (tag = Slytherin) dst: (tag = Web and tag = Slytherin) conn: All Connections'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     egress:
         - to:
@@ -77,7 +80,8 @@ metadata:
         description: 'src: (tag = Gryffindor) dst: (tag = Web and tag = Gryffindor) conn: All Connections'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     ingress:
         - from:
@@ -101,7 +105,8 @@ metadata:
         description: 'src: (tag = Hufflepuff) dst: (tag = Web and tag = Hufflepuff) conn: All Connections'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy_4
+    name: policy-4
+    namespace: default
 spec:
     ingress:
         - from:
@@ -125,7 +130,8 @@ metadata:
         description: 'src: (tag = Slytherin) dst: (tag = Web and tag = Slytherin) conn: All Connections'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy_5
+    name: policy-5
+    namespace: default
 spec:
     ingress:
         - from:
@@ -149,7 +155,8 @@ metadata:
         description: 'src: (tag = Web and tag = Gryffindor) dst: (tag = App and tag = Gryffindor) conn: All Connections'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy_6
+    name: policy-6
+    namespace: default
 spec:
     egress:
         - to:
@@ -175,7 +182,8 @@ metadata:
         description: 'src: (tag = Web and tag = Hufflepuff) dst: (tag = App and tag = Hufflepuff) conn: All Connections'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy_7
+    name: policy-7
+    namespace: default
 spec:
     egress:
         - to:
@@ -201,7 +209,8 @@ metadata:
         description: 'src: (tag = Web and tag = Slytherin) dst: (tag = App and tag = Slytherin) conn: All Connections'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy_8
+    name: policy-8
+    namespace: default
 spec:
     egress:
         - to:
@@ -227,7 +236,8 @@ metadata:
         description: 'src: (tag = Web and tag = Gryffindor) dst: (tag = App and tag = Gryffindor) conn: All Connections'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy_9
+    name: policy-9
+    namespace: default
 spec:
     ingress:
         - from:
@@ -253,7 +263,8 @@ metadata:
         description: 'src: (tag = Web and tag = Hufflepuff) dst: (tag = App and tag = Hufflepuff) conn: All Connections'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy_10
+    name: policy-10
+    namespace: default
 spec:
     ingress:
         - from:
@@ -279,7 +290,8 @@ metadata:
         description: 'src: (tag = Web and tag = Slytherin) dst: (tag = App and tag = Slytherin) conn: All Connections'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy_11
+    name: policy-11
+    namespace: default
 spec:
     ingress:
         - from:
@@ -305,7 +317,8 @@ metadata:
         description: 'src: (tag = App and tag = Gryffindor) dst: (tag = DB and tag = Gryffindor) conn: All Connections'
         nsx-id: "9197"
     creationTimestamp: null
-    name: policy_12
+    name: policy-12
+    namespace: default
 spec:
     egress:
         - to:
@@ -331,7 +344,8 @@ metadata:
         description: 'src: (tag = App and tag = Hufflepuff) dst: (tag = DB and tag = Hufflepuff) conn: All Connections'
         nsx-id: "9197"
     creationTimestamp: null
-    name: policy_13
+    name: policy-13
+    namespace: default
 spec:
     egress:
         - to:
@@ -357,7 +371,8 @@ metadata:
         description: 'src: (tag = App and tag = Slytherin) dst: (tag = DB and tag = Slytherin) conn: All Connections'
         nsx-id: "9197"
     creationTimestamp: null
-    name: policy_14
+    name: policy-14
+    namespace: default
 spec:
     egress:
         - to:
@@ -383,7 +398,8 @@ metadata:
         description: 'src: (tag = App and tag = Gryffindor) dst: (tag = DB and tag = Gryffindor) conn: All Connections'
         nsx-id: "9197"
     creationTimestamp: null
-    name: policy_15
+    name: policy-15
+    namespace: default
 spec:
     ingress:
         - from:
@@ -409,7 +425,8 @@ metadata:
         description: 'src: (tag = App and tag = Hufflepuff) dst: (tag = DB and tag = Hufflepuff) conn: All Connections'
         nsx-id: "9197"
     creationTimestamp: null
-    name: policy_16
+    name: policy-16
+    namespace: default
 spec:
     ingress:
         - from:
@@ -435,7 +452,8 @@ metadata:
         description: 'src: (tag = App and tag = Slytherin) dst: (tag = DB and tag = Slytherin) conn: All Connections'
         nsx-id: "9197"
     creationTimestamp: null
-    name: policy_17
+    name: policy-17
+    namespace: default
 spec:
     ingress:
         - from:
@@ -461,7 +479,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
