--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjoint_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjoint_NoHint/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (group = Dumbledore1 and group != Dumbledore2) dst: (group != Slytherin) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -29,7 +30,8 @@ metadata:
         description: 'src: (group = Dumbledore1) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     egress:
         - to:
@@ -53,7 +55,8 @@ metadata:
         description: 'src: (group = Dumbledore1 and group != Dumbledore2) dst: (group != Slytherin) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     ingress:
         - from:
@@ -77,7 +80,8 @@ metadata:
         description: 'src: (group = Dumbledore1) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     ingress:
         - from:
@@ -101,7 +105,8 @@ metadata:
         description: 'src: (group = Dumbledore2 and group != Dumbledore1) dst: (group != Gryffindor) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy_4
+    name: policy-4
+    namespace: default
 spec:
     egress:
         - to:
@@ -125,7 +130,8 @@ metadata:
         description: 'src: (group = Dumbledore2) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy_5
+    name: policy-5
+    namespace: default
 spec:
     egress:
         - to:
@@ -149,7 +155,8 @@ metadata:
         description: 'src: (group = Dumbledore2 and group != Dumbledore1) dst: (group != Gryffindor) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy_6
+    name: policy-6
+    namespace: default
 spec:
     ingress:
         - from:
@@ -173,7 +180,8 @@ metadata:
         description: 'src: (group = Dumbledore2) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy_7
+    name: policy-7
+    namespace: default
 spec:
     ingress:
         - from:
@@ -197,7 +205,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
