--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimpler_NoHint/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimpler_NoHint/pods.yaml
@@ -6,6 +6,7 @@ metadata:
         group__Slytherin: "true"
         group__Web: "true"
     name: Slytherin-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -18,6 +19,7 @@ metadata:
         group__App: "true"
         group__Slytherin: "true"
     name: Slytherin-App
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -30,6 +32,7 @@ metadata:
         group__Gryffindor: "true"
         group__Web: "true"
     name: Gryffindor-Web
+    namespace: default
 spec:
     containers: null
 status: {}
@@ -42,6 +45,7 @@ metadata:
         group__App: "true"
         group__Gryffindor: "true"
     name: Gryffindor-App
+    namespace: default
 spec:
     containers: null
 status: {}
