--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleTwoDeniesSimple_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleTwoDeniesSimple_NoHint/policies.yaml
@@ -5,7 +5,8 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group != Dumbledore1 and group != Dumbledore2) conn: All Connections'
         nsx-id: "3"
     creationTimestamp: null
-    name: policy_0
+    name: policy-0
+    namespace: default
 spec:
     egress:
         - to:
@@ -29,7 +30,8 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group != Dumbledore1 and group != Dumbledore2) conn: All Connections'
         nsx-id: "3"
     creationTimestamp: null
-    name: policy_1
+    name: policy-1
+    namespace: default
 spec:
     ingress:
         - from:
@@ -53,7 +55,8 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group != Dumbledore1 and group != Dumbledore2) conn: All Connections'
         nsx-id: "4"
     creationTimestamp: null
-    name: policy_2
+    name: policy-2
+    namespace: default
 spec:
     egress:
         - to:
@@ -77,7 +80,8 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group != Dumbledore1 and group != Dumbledore2) conn: All Connections'
         nsx-id: "4"
     creationTimestamp: null
-    name: policy_3
+    name: policy-3
+    namespace: default
 spec:
     ingress:
         - from:
@@ -101,7 +105,8 @@ metadata:
         description: Default Deny Network Policy
         nsx-id: noNsxID
     creationTimestamp: null
-    name: defaultDeny
+    name: default-deny
+    namespace: default
 spec:
     podSelector: {}
     policyTypes:
