--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/pods.yaml
@@ -3,7 +3,22 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Slytherin-orOrAnd-no-DB: "true"
+        group__Slytherin: "true"
+        tag__DB: "true"
+        tag__Slytherin: "true"
+    name: Slytherin-DB
+    namespace: default
+spec:
+    containers: null
+status: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+    creationTimestamp: null
+    labels:
+        group__Slytherin: "true"
+        group__Slytherin-And-no-DB: "true"
         tag__Slytherin: "true"
         tag__Web: "true"
     name: Slytherin-Web
@@ -17,7 +32,8 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Slytherin-orOrAnd-no-DB: "true"
+        group__Slytherin: "true"
+        group__Slytherin-And-no-DB: "true"
         tag__App: "true"
         tag__Slytherin: "true"
     name: Slytherin-App
@@ -31,7 +47,22 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Hufflepuff-orOrAnd-no-DB: "true"
+        group__Hufflepuff: "true"
+        tag__DB: "true"
+        tag__Hufflepuff: "true"
+    name: Hufflepuff-DB
+    namespace: default
+spec:
+    containers: null
+status: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+    creationTimestamp: null
+    labels:
+        group__Hufflepuff: "true"
+        group__Hufflepuff-And-no-DB: "true"
         tag__Hufflepuff: "true"
         tag__Web: "true"
     name: Hufflepuff-Web
@@ -45,7 +76,8 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Hufflepuff-orOrAnd-no-DB: "true"
+        group__Hufflepuff: "true"
+        group__Hufflepuff-And-no-DB: "true"
         tag__App: "true"
         tag__Hufflepuff: "true"
     name: Hufflepuff-App
@@ -59,7 +91,22 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Gryffindor-orOrAnd-no-DB: "true"
+        group__Gryffindor: "true"
+        tag__DB: "true"
+        tag__Gryffindor: "true"
+    name: Gryffindor-DB
+    namespace: default
+spec:
+    containers: null
+status: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+    creationTimestamp: null
+    labels:
+        group__Gryffindor: "true"
+        group__Gryffindor-And-no-DB: "true"
         tag__Gryffindor: "true"
         tag__Web: "true"
     name: Gryffindor-Web
@@ -73,7 +120,8 @@ kind: Pod
 metadata:
     creationTimestamp: null
     labels:
-        group__Gryffindor-orOrAnd-no-DB: "true"
+        group__Gryffindor: "true"
+        group__Gryffindor-And-no-DB: "true"
         tag__App: "true"
         tag__Gryffindor: "true"
     name: Gryffindor-App
