--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1c_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1c_NoHint/policies.yaml
@@ -55,7 +55,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: Default Deny Network Policy
-        nsx-id: noNsxID
+        nsx-id: "1003"
     creationTimestamp: null
     name: default-deny
     namespace: default
